k8s-cluster-hcloud-critical/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
# TODO: https://gateway.envoyproxy.io/docs/tasks/extensibility/dynamic-modules/
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns-cloudflare
  name: envoy-gw-default
  namespace: envoy-gateway
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      load-balancer.hetzner.cloud/location: nbg1
      load-balancer.hetzner.cloud/name: k8s-envoy-gateway-lb
      load-balancer.hetzner.cloud/network: k8s-network
      load-balancer.hetzner.cloud/use-private-ip: "true"
      load-balancer.hetzner.cloud/uses-proxyprotocol: "true"
  listeners:
    # Fallbacks
    - name: https
      port: 443
      hostname: "*.k8s.henrikgerdes.me"
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: tls-gw-certs
      allowedRoutes:
        namespaces:
          from: All
    - name: http-gw
      allowedRoutes:
        namespaces:
          from: All
      hostname: "*.gw.henrikgerdes.me"
      port: 80
      protocol: HTTP
    - name: http-k8s
      allowedRoutes:
        namespaces:
          from: All
      hostname: "*.k8s.henrikgerdes.me"
      port: 80
      protocol: HTTP
