k8s-cluster-hcloud-critical/envoy-gateway/https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
  namespace: envoy-gateway
spec:
  parentRefs:
    - name: envoy-gw-default
      namespace: envoy-gateway
      sectionName: http-k8s
  hostnames:
    - "*.k8s.henrikgerdes.me" # catch all hostnames
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
